# presen_share

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci_backend.yml  deploy_to_heroku.yml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml  setup.cfg
backend/app/: main.py
backend/tests/: test_page_sync_backend.py
chrome/: README.md  background.js  content-scripts.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  style.css
doc/: webrtc.md
gcp/page_sync_backend/: .gcloudignore  Dockerfile  README.md  pyproject.toml
gcp/page_sync_backend/app/: main.py
gcp/page_sync_backend/tests/: test_page_sync_backend.py
sample/localhost/: package-lock.json  poc.html  webrtc1.js
