[tool.poetry]
name = "page_sync_backend"
version = "0.1.0"
description = ""
authors = ["hyksm <hiyoko3m.tech@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9.6"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.7b0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
